fixed the css overview contrast error

--- a/styles/base.css
+++ b/styles/base.css
@@ -53,7 +53,6 @@ footer {
     font-size: 2rem;
     border: 0;
     background: none;
-    color: white;
 }
 
 .parent {
